# ai-review

./: Dockerfile  action-improved.yml  action.yml  pyproject.toml
.github/workflows/: action-build.yml  reusable-pypi.yml  reusable-test.yml  workflow-publish.yml  workflow-test.yml
ai_review/clients/gitea/pr/: client.py
ai_review/clients/gitea/pr/schema/: comments.py
ai_review/prompts/: default_system_inline.md  ollama_system_inline.md
ai_review/services/review/internal/inline/: service.py
ai_review/services/vcs/gitea/: client.py
