[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-review-gitea"
readme = { file = "README.md", content-type = "text/markdown" }
version = "1.0.0"
license = { file = "LICENSE" }
authors = [
    { name = "dungtranhoang", email = "your.email@example.com" }
]
keywords = [
    "ai",
    "code review",
    "llm",
    "openai",
    "claude",
    "gemini",
    "ollama",
    "openrouter",
    "ci/cd",
    "gitlab",
    "github",
    "gitea",
    "bitbucket",
    "bitbucket cloud",
    "bitbucket server"
]
maintainers = [
    { name = "dungtranhoang", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
description = "AI-powered code review tool with improved Gitea inline comments support — built with LLMs like OpenAI, Claude, Gemini, Ollama, and OpenRouter"
dependencies = [
    "typer",
    "httpx",
    "pyyaml",
    "loguru",
    "aiofiles",
    "pydantic",
    "pydantic-settings"
]
requires-python = ">=3.11"

[project.urls]
Issues = "https://github.com/dungtranhoang/ai-review/issues"
Homepage = "https://github.com/dungtranhoang/ai-review"
Repository = "https://github.com/dungtranhoang/ai-review"

[project.scripts]
ai-review = "ai_review.cli.main:app"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_review*"]

[tool.setuptools.package-data]
"ai_review.prompts" = ["*.md"]
"ai_review.resources" = ["*.yaml"]
